--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,20 @@
+/*COLORS:*/
+/* #a5836b Cinnamon glaze 90yr*/
+/* #008080 Web Safe: teal */
+/*COLORS:*/
+/*COLORS:*/
+
+
 /*index styles*/
 body{
-    background-color: #73604f;
+    background-color: #a5836b;
     font-family: 'Merriweather', serif;
     
 }
 
 .nav-wrapper{
     font-family: 'Playfair Display', serif;
-    background-color: #3c8d93;
+    background-color: #008080;
     
 }
 
@@ -89,11 +96,16 @@ body{
 
 .aboutMe  {
     text-align: center;
+    
+    
 
 }
 
 .aboutMe img{
-    border-radius: 50%
+    border-radius: 50%;
+    box-shadow: 7px 7px 7px 7px #888888;;
+
+   
 }
 
 .aboutMe p {
@@ -116,7 +128,7 @@ body{
 }
 
 .phone {
-    background-color: #3c8d93;
+    background-color: #008080;
     color: white;
     font-size: 19px;
     padding: 15px;
